--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 *.shader filter=lfs diff=lfs merge=lfs -text
 *.controller filter=lfs diff=lfs merge=lfs -text
 *.prefab filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
